--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
 	},
 	"require": {
 		"php": "^7.2",
-		"chillerlan/php-traits": "^1.1",
-		"chillerlan/php-log": "^1.0"
+		"chillerlan/php-traits": "^1.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^7.1"
