--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"chillerlan/php-traits": "^1.1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^7.1"
+		"phpunit/phpunit": "^7.1",
+		"psr/log": "^1.0"
 	},
 	"autoload": {
 		"psr-4": {
