--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,11 @@
 	},
 	"require": {
 		"php": "^7.2",
-		"chillerlan/php-traits": "^1.1"
+		"chillerlan/php-traits": "^2.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^7.1",
+		"chillerlan/php-httpinterface": "^2.0",
+		"phpunit/phpunit": "^7.3",
 		"psr/log": "^1.0"
 	},
 	"autoload": {
