--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 		"php": "^7.2"
 	},
 	"require-dev": {
-		"chillerlan/php-httpinterface": "dev-master",
+		"chillerlan/php-httpinterface": "^3.0",
 		"phpunit/phpunit": "^7.5",
 		"psr/log": "^1.0"
 	},
