--- a/composer.json
+++ b/composer.json
@@ -21,21 +21,12 @@
 	},
 	"require": {
 		"php": "^7.2",
-		"ext-json": "*"
-	},
-	"require-dev": {
-		"chillerlan/php-httpinterface": "^3.0",
-		"phpunit/phpunit": "^8.2",
-		"psr/log": "^1.1"
+		"chillerlan/php-settings-container":"^1.2",
+		"psr/http-message":"^1.0"
 	},
 	"autoload": {
 		"psr-4": {
 			"chillerlan\\HTTP\\MagicAPI\\": "src/"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"chillerlan\\HTTPTest\\MagicAPI\\": "tests/"
 		}
 	}
 }
