--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,18 @@
 	},
 	"require": {
 		"php": "^7.2",
+		"ext-json": "*",
 		"chillerlan/php-settings-container":"^1.2",
 		"psr/http-message":"^1.0"
 	},
 	"autoload": {
 		"psr-4": {
 			"chillerlan\\HTTP\\MagicAPI\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"chillerlan\\HTTPTest\\MagicAPI\\": "tests/"
 		}
 	}
 }
